Add Status counters. Redesign presentation of Rules and Scenarios

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -13,12 +13,12 @@
             {
                 <div class="content_container_header">
                     <div class="title_and_link">
-                            <h1 class="content_container_title id=" id="@Model.SelectedFeature.Name-title">
-                                <img class="container_title_status_img"
-                                    src="~/icons/@(IconHelper.GetStatusIcon(@Model.SelectedFeature.Status)).svg"
-                                    alt="status icon" />
-                                @Model.SelectedFeature.Name
-                            </h1>
+                        <h1 class="content_container_title id=" id="@Model.SelectedFeature.Name-title">
+                            <img class="container_title_status_img"
+                                src="~/icons/@(IconHelper.GetStatusIcon(@Model.SelectedFeature.Status)).svg"
+                                alt="status icon" />
+                            @Model.SelectedFeature.Name
+                        </h1>
                         @if (Model.SelectedFeature.FilePath != null)
                         {
                             var rawFilePath = Model.SelectedFeature.FilePath;
@@ -28,28 +28,51 @@
                                 <i class="fa fa-github"></i>GitHub</a>
                         }
                     </div>
-                    @if (Model.SelectedFeature.Tags.Any())
-                            {
-                                <ul class="tag_list">
-                                    @foreach (var tag in Model.SelectedFeature.Tags)
+                    <div class="tag_and_rule_count">
+                        @if (Model.SelectedFeature.Tags.Any())
+                        {
+                            <ul class="tag_list">
+                                @foreach (var tag in Model.SelectedFeature.Tags)
+                                {
+                                    var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
+                                    var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
+                                    if (sanitizedTag == "ignore")
                                     {
-                                        var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
-                                        var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
-                                        if (sanitizedTag == "ignore")
-                                        {
-                                            <li class="tag ignore">@casedTag</li>
-                                        }
-                                        else if (sanitizedTag == "smoke")
-                                        {
-                                            <li class="tag smoke">@casedTag</li>
-                                        }
-                                        else
-                                        {
-                                            <li class="tag">@casedTag</li>
-                                        }
+                                        <li class="tag ignore">@casedTag</li>
                                     }
+                                    else if (sanitizedTag == "smoke")
+                                    {
+                                        <li class="tag smoke">@casedTag</li>
+                                    }
+                                    else
+                                    {
+                                        <li class="tag">@casedTag</li>
+                                    }
+                                }
+                            </ul>
+                        }
+
+                        @if (Model.SelectedFeature.Rules.Any())
+                        {
+                            <div class="rule-status-summary">
+                                <h3>@Localizer["Rules:"]</h3>
+                                <ul class="status-counts">
+                                    <li>
+                                        <img src="~/icons/passed.svg" alt="Passed Rule icon" />
+                                        <h3>@Model.RulePassedCount</h3>
+                                    </li>
+                                    <li>
+                                        <img src="~/icons/pending.svg" alt="Not Implemented Rule icon" />
+                                        <h3>@Model.RuleNotImplementedCount</h3>
+                                    </li>
+                                    <li>
+                                        <img src="~/icons/failed.svg" alt="Failed Rule icon" />
+                                        <h3>@Model.RuleFailedCount</h3>
+                                    </li>
                                 </ul>
-                            }
+                            </div>
+                        }
+                    </div>
                     <p class="content_container_duration">Test Duration: @Model.SelectedFeature.TestDuration</p>
                     <div class="content_container_description">
                         @Model.MarkdownStringToHtml(@Model.SelectedFeature.Description ?? string.Empty)</div>
@@ -58,7 +81,6 @@
                 <ul class="scenario_list">
                     @foreach (var scenario in Model.SelectedFeature.Scenarios)
                     {
-                        <hr />
                         <div class="scenario_tag_and_name">
                             <h2 id="@scenario.Name-scenario" class="container_scenario_name">
                                 <img class="container_scenario_status_img"
@@ -109,51 +131,12 @@
                     @foreach (var rule in Model.SelectedFeature.Rules)
                     {
                         <div class="container_scenario_rule">
-                            <hr />
                             <div class="rule_tag_and_name">
-                                <h3 class="scenario_rule_name" id="@rule.Name-rule">Rule: @rule.Name</h3>
-                                @if (rule.Tags.Any())
-                                {
-                                    <ul class="tag_list scenario_tags">
-                                        @foreach (var tag in rule.Tags)
-                                        {
-                                            var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
-                                            var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
-                                            if (sanitizedTag == "ignore")
-                                            {
-                                                <li class="tag ignore">@casedTag</li>
-                                            }
-                                            else if (sanitizedTag == "smoke")
-                                            {
-                                                <li class="tag smoke">@casedTag</li>
-                                            }
-                                            else
-                                            {
-                                                <li class="tag">@casedTag</li>
-                                            }
-                                        }
-                                    </ul>
-                                }
-                            </div>
-                            <div class="scenario_rule_description" id="scenario_rule_description">
-
-                                @Model.MarkdownStringToHtml(rule.Description ?? string.Empty)</div>
-
-                        </div>
-                        <ul class="scenario_list">
-                            @foreach (var scenario in rule.Scenarios)
-                            {
-                                <hr />
-                                <div class="scenario_tag_and_name">
-                                    <h2 id="@scenario.Name-scenario" class="container_scenario_name">
-                                        <img class="container_scenario_status_img"
-                                            src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
-                                        @scenario.Name
-                                    </h2>
-                                    @if (scenario.Tags.Any())
+                                <div class="tag_and_rule_count">
+                                    @if (rule.Tags.Any())
                                     {
-                                        <ul class="tag_list scenario_tags">
-                                            @foreach (var tag in scenario.Tags)
+                                        <ul class="tag_list rule_tags ">
+                                            @foreach (var tag in rule.Tags)
                                             {
                                                 var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
                                                 var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
@@ -172,6 +155,76 @@
                                             }
                                         </ul>
                                     }
+                                    @{
+                                        // Calculate scenario status counts for this rule
+                                        int scenarioPassedCount = rule.Scenarios.Count(s => s.Status.ToString() == "Passed");
+                                        int scenarioFailedCount = rule.Scenarios.Count(s => s.Status.ToString() == "Failed");
+                                        int scenarioNotImplementedCount = rule.Scenarios.Count(s => s.Status.ToString() ==
+                                        "NotImplemented");
+                                    }
+
+                                    <div class="rule-status-summary">
+                                        <h3>@Localizer["Scenarios:"]</h3>
+                                        <ul class="status-counts">
+                                            <li>
+                                                <img src="~/icons/passed.svg" alt="Passed Scenario icon" />
+                                                <h3>@scenarioPassedCount</h3>
+                                            </li>
+                                            <li>
+                                                <img src="~/icons/pending.svg" alt="Not Implemented Scenario icon" />
+                                                <h3>@scenarioNotImplementedCount</h3>
+                                            </li>
+                                            <li>
+                                                <img src="~/icons/failed.svg" alt="Failed Scenario icon" />
+                                                <h3>@scenarioFailedCount</h3>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="rule_header_content">
+                                    <h3 class="scenario_rule_name" id="@rule.Name-rule">
+                                        <img class="container_scenario_status_img"
+                                            src="~/icons/@(IconHelper.GetStatusIcon(rule.Status)).svg" alt="status icon" />
+                                        @rule.Name
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="scenario_rule_description" id="scenario_rule_description">
+                                @Model.MarkdownStringToHtml(rule.Description ?? string.Empty)
+                            </div>
+                        </div>
+                        <ul class="scenario_list">
+                            @foreach (var scenario in rule.Scenarios)
+                            {
+                                @if (scenario.Tags.Any())
+                                {
+                                    <ul class="tag_list scenario_tags">
+                                        @foreach (var tag in scenario.Tags)
+                                        {
+                                            var sanitizedTag = tag.Length > 1 ? tag.Substring(1) : tag;
+                                            var casedTag = char.ToUpper(sanitizedTag[0]) + sanitizedTag.Substring(1);
+                                            if (sanitizedTag == "ignore")
+                                            {
+                                                <li class="tag ignore">@casedTag</li>
+                                            }
+                                            else if (sanitizedTag == "smoke")
+                                            {
+                                                <li class="tag smoke">@casedTag</li>
+                                            }
+                                            else
+                                            {
+                                                <li class="tag">@casedTag</li>
+                                            }
+                                        }
+                                    </ul>
+                                }
+                                <div class="scenario_tag_and_name">
+                                    <h2 id="@scenario.Name-scenario" class="container_scenario_name">
+                                        <img class="container_scenario_status_img"
+                                            src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
+                                        @scenario.Name
+                                    </h2>
+
                                 </div>
                                 <h3 class="container_scenario_duration"><strong>Scenario duration:</strong> @scenario.TestDuration</h3>
                                 @foreach (var step in scenario.Steps)
