--- a/source/VizGurka/wwwroot/css/table-of-contents.css
+++ b/source/VizGurka/wwwroot/css/table-of-contents.css
@@ -46,6 +46,6 @@
     border-bottom: 1px solid #E2E4E9D1;
   }
 
-  .table_of_contents ul li ul li {
+  .table_of_contents ul li ul  {
     border-bottom: 1px solid #E2E4E9D1;
   }
